@@ -1,6 +1,10 @@
 WebHelpers ChangeLog
 
 0.2.3 (**svn**)
+* WARNING: paginate now takes arguments intended for the collection object as
+  query_args. This could affect backwards compatibility. This fixes a common
+  issue that non-keyword arguments passed into paginate get eaten by paginate's
+  keyword arguments instead of being in *args to go on to the collection.
 * Added environ checking with Routes so that page will be automatically pulled
   out of the query string, or from the Routes match dict if available.
 * Added checking for objects that had assign_mapper applied to them.
